--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -14,9 +14,6 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" href="{{ url_for("home")}}">Monopoly</a>
-    {%  if game_id %}
-    <button id="copy">Copy ID</button>
-    {% endif %}
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
     </ul>
@@ -29,7 +26,7 @@
 
     {% if game_id %}
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">{{ game_name }}</div>
+      <div class="sidebar-heading">{{ game_name }} <span class="badge badge-success align-middle mx-2" id="copy">Copier l'id</span></div>
       <div class="list-group list-group-flush" id="player_list">
         <div class="list-group-item list-group-item-action bg-light">
           <strong>{{ player_name }}</strong>
@@ -38,9 +35,8 @@
 
         <div id="chatbox">
             <div id="messages">
-
             </div>
-            <input type="text" name="msg" id="msg" placeholder="Oui ?">
+            <input type="text" name="msgInput" id="msgInput" placeholder="Entrez votre message">
         </div>
 
     </div>
