--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -1,44 +1,39 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title>{{ page_title }}</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static',filename='css/sidebar.css') }}">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>{{ page_title }}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/sidebar.css') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="{{ url_for("home")}}">Monopoly</a>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
-    </ul>
-  </div>
+    <a class="navbar-brand" href="{{ url_for("home")}}">Monopoly</a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto"></ul>
+    </div>
 </nav>
 
 
 
-  <div class="d-flex" id="wrapper">
-
+<div class="d-flex" id="wrapper">
     {% if game_id %}
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">{{ game_name }} <span class="badge badge-success align-middle mx-2" id="copy">Copier l'id</span></div>
-      <div class="list-group list-group-flush" id="player_list">
-        <div class="list-group-item list-group-item-action bg-light">
-          <strong>{{ player_name }}</strong>
-        </div>
-      </div>
-
-        <div id="chatbox">
-            <div id="messages">
+        <div class="sidebar-heading">{{ game_name }} <span class="badge badge-success align-middle mx-2" id="copy">Copier l'id</span></div>
+        <div class="list-group list-group-flush" id="player_list">
+            <div class="list-group-item list-group-item-action bg-light">
+                <strong>{{ player_name }}</strong>
             </div>
+        </div>
+        <div id="chatbox">
+            <div id="messages"></div>
             <input type="text" name="msgInput" id="msgInput" placeholder="Entrez votre message">
         </div>
-
     </div>
     {% endif %}
 
