--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>{{ page_title }}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
@@ -37,9 +36,9 @@
     </div>
     {% endif %}
 
-    <main role="main" class="container">
+    <main role="main">
 
-      <div class="container">
+      <div>
         {% block body %}
         {% endblock %}
       </div>
