--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -11,7 +11,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="{{ url_for("home")}}">Monopoly</a>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto"></ul>
