--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -6,7 +6,7 @@
     <script src="{{ url_for('static',filename='js/graphics/three.min.js') }}"></script>
     <script src="{{ url_for('static',filename='js/graphics/OrbitControls.js') }}"></script>
     <script src="{{ url_for('static',filename='js/graphics/helperFns.js') }}"></script>
-    <script> init(); </script>
+    <script> main(); </script>
     <script>
     let gameId = {{ game_id }};
     let playerId = {{ player_id }};
