Connected game to sockets with json

--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -13,6 +13,8 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="{{ url_for("home")}}">Monopoly</a>
+    <button type="button" id="start_game">Start game</button>
+    <button type="button" id="play_turn">Play turn</button>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto"></ul>
     </div>
