Ajout des modals (pas encore affichage dynamique, mais statique pour example)

--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -31,6 +31,10 @@
                 <strong>{{ player_name }}</strong>
             </div>
         </div>
+        <div style="margin-top: 30px;">
+            <div style="margin-top: 10px;"><button type="button" class="btn btn-secondary" id="question">Open modal Question</button></div>
+            <div style="margin-top: 10px;"><button type="button" class="btn btn-secondary" id="information">Open modal Infos</button></div>
+        </div>
         <div id="chatbox">
             <div id="messages"></div>
             <input type="text" name="msgInput" id="msgInput" placeholder="Entrez votre message">
