--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -17,4 +17,41 @@
     </script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static',filename='js/socket.js') }}"></script>
+
+    <div class="modal fade" style="margin: auto;" id="modalQuestion" tabindex="-1" role="dialog" aria-labelledby="modalQuestionLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalQuestionLabel"></h5>
+          </div>
+          <div class="modal-body">
+             <div id="modalQuestionContent">
+
+             </div>
+             <div class="form-group">
+                <div style="margin-top: 10px;"><button type="button" id="modalQuestion1" class="btn btn-light" data-dismiss="modal"></button></div>
+                <div style="margin-top: 10px;"><button type="button" id="modalQuestion2" class="btn btn-light" data-dismiss="modal"></button></div>
+             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="modalInfo" tabindex="-1" role="dialog" aria-labelledby="modalQuestionInfo" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalInfoLabel"></h5>
+          </div>
+          <div class="modal-body">
+             <div id="modalInfoContent">
+
+             </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">OK</button>
+          </div>
+        </div>
+      </div>
+    </div>
 {% endblock %}
