Uncommited small changes

--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static',filename='js/socket.js') }}"></script>
 
-    <div class="modal fade" style="margin: auto;" id="modalQuestion" tabindex="-1" role="dialog" aria-labelledby="modalQuestionLabel" aria-hidden="true">
+    <div class="modal fade" style="margin: 0 auto;" id="modalQuestion" tabindex="-1" role="dialog" aria-labelledby="modalQuestionLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
