First step to buy houses from frontend, with bugs

--- a/templates/home.html.jinja2
+++ b/templates/home.html.jinja2
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-  <h1 class="h3 my-5">Monopoly en ligne gratuit</h1>
+  <h1 class="h3 my-5 text-center">Monopoly en ligne gratuit</h1>
 
   <p class="text-center my-5">Bienvenue sur le Monopoly en ligne gratuit. Créez une partie ou rejoignez en une !</p>
 
@@ -43,10 +43,6 @@
             <div class="form-group">
               <label for="player_name_create">Votre nom</label>
               <input type="text" class="form-control" placeholder="Votre nom" id="player_name_create" name="player_name" required>
-            </div>
-            <div class="form-group">
-              <label for="game_name">Nom de la partie</label>
-              <input type="text" class="form-control" placeholder="Le nom de la partie" id="game_name" name="game_name" required>
             </div>
           </div>
 
