--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -28,8 +28,12 @@
           <button type="button" class="btn btn-outline-info btn-sm" id="startGame">Lancer la partie</button>
         </div>
         <div class="list-group list-group-flush" id="player_list">
-            <div class="list-group-item list-group-item-action bg-light">
+            <div id="{{ player_name }}" class="list-group-item list-group-item-action bg-light">
                 <strong>{{ player_name }}</strong>
+                <svg class="bi bi-x" style="float : right" width="2em" height="2em" viewBox="0 0 16 16" fill="red" xmlns="http://www.w3.org/2000/svg">
+  			        <path fill-rule="evenodd" d="M11.854 4.146a.5.5 0 010 .708l-7 7a.5.5 0 01-.708-.708l7-7a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+  			        <path fill-rule="evenodd" d="M4.146 4.146a.5.5 0 000 .708l7 7a.5.5 0 00.708-.708l-7-7a.5.5 0 00-.708 0z" clip-rule="evenodd"/>
+		        </svg>
             </div>
         </div>
 
