Updating sidebar from idsToPossessions() functional

--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -7,91 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/sidebar.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script>
-        const check =
-        "<svg class=\"bi bi-check\" style=\"float : right\" width=\"2em\" height=\"2em\" viewBox=\"0 0 16 16\" fill=\"green\" xmlns=\"http://www.w3.org/2000/svg\">\n" +
-        "  <path fill-rule=\"evenodd\" d=\"M13.854 3.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3.5-3.5a.5.5 0 11.708-.708L6.5 10.293l6.646-6.647a.5.5 0 01.708 0z\" clip-rule=\"evenodd\"/>\n" +
-        "</svg>";
-
-        const uncheck =
-        "<svg class=\"bi bi-x\" style=\"float : right\" width=\"2em\" height=\"2em\" viewBox=\"0 0 16 16\" fill=\"red\" xmlns=\"http://www.w3.org/2000/svg\">\n" +
-        "  <path fill-rule=\"evenodd\" d=\"M11.854 4.146a.5.5 0 010 .708l-7 7a.5.5 0 01-.708-.708l7-7a.5.5 0 01.708 0z\" clip-rule=\"evenodd\"/>\n" +
-        "  <path fill-rule=\"evenodd\" d=\"M4.146 4.146a.5.5 0 000 .708l7 7a.5.5 0 00.708-.708l-7-7a.5.5 0 00-.708 0z\" clip-rule=\"evenodd\"/>\n" +
-        "</svg>";
-
-        const frontGoods = `<div id="player-money">
-                    <i class="fa fa-money" style="color:green"> 0 $</i>
-                </div>
-                <div id="player-goods">
-                    <div id="player-houses" style="display : flex; flex-direction: row; font-size: 14.7px">
-                        <div id="brown">
-                            <i class="fa fa-home" style="color:#8B4513"> 0</i>
-                        </div>
-                        <div id="light-blue">
-                            <i class="fa fa-home" style="color:#87CEEB"> 0</i>
-                        </div>
-                        <div id="magenta">
-                            <i class="fa fa-home" style="color:#FF69B4"> 0</i>
-                        </div>
-                        <div id="orange">
-                            <i class="fa fa-home" style="color:#FF8C00"> 0</i>
-                        </div>
-                        <div id="red">
-                            <i class="fa fa-home" style="color:red"> 0</i>
-                        </div>
-                        <div id="yellow">
-                            <i class="fa fa-home" style="color:#FFD700"> 0</i>
-                        </div>
-                        <div id="green">
-                            <i class="fa fa-home" style="color:green"> 0</i>
-                        </div>
-                        <div id="blue">
-                            <i class="fa fa-home" style="color:blue"> 0</i>
-                        </div>
-                    </div>
-                    <div id="player-station-services" style="display : flex; flex-direction: row">
-                        <div id=player-station" style="height:20px">
-                            <i class="fa fa-train" aria-hidden="true" style="color:black"> 0 </i>
-                        </div>
-                        <div id="electricity" style="margin-left: 10px">
-                            <i class="fa fa-lightbulb-o" style="color:black"> 0 </i>
-                        </div>
-                        <div id="water" style="margin-left: 10px">
-                            <i class="fa fa-tint" style="color:black"> 0 </i>
-                        </div>
-                    </div>
-                </div>` ;
-    </script>
-    <script>
-        /* We suppose we have a mapping :
-        * dict : { "player1":{"money":int, "houses":{"brown":int, ...},
-        * "station":int, "electricity":bool, "water":bool} ... }
-        * */
-        function updateSidebar(){
-            for (let pid of Object.keys(idsToPossessions)){
-                updateSidebarId(pid);
-            }
-        }
-        function updateSidebarId(pid){
-            let possessions, houses;
-            let money, brown, lightBlue, magenta, orange, red, yellow, green, blue, station, electricity, water;
-            possessions = idsToPossessions[pid];
-            money = possessions["money"];
-            houses = possessions["houses"];
-            brown = houses["brown"];
-            lightBlue = houses["lightBlue"];
-            magenta = houses["magenta"];
-            orange = houses["orange"];
-            red = houses["red"];
-            yellow = houses["yellow"];
-            green = houses["green"];
-            blue = houses["blue"];
-            station = possessions["station"];
-            electricity = possessions["electricity"];
-            water = possessions["water"];
-        };
-
-    </script>
+    <script src="{{ url_for('static',filename='js/sidebar.js') }}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
