Made backend for cards in order to join it with frontend

--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -73,10 +73,10 @@ let playerName = "{{ player_name }}";
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="modalQuestionLabel">Acheter des maisons</h5>
+        <h5 class="modal-title" id="modalBuyHousesLabel">Acheter des maisons</h5>
       </div>
       <div class="modal-body">
-        <div id="modalQuestionContent" class="text-center" >
+        <div id="modalBuyHousesContent" class="text-center" >
           Voulez vous acheter des maisons sur votre terrain ?
         </div>
         <div class="row my-3 text-center">
