Updating sidebar when necessary + few corrections

--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -50,7 +50,7 @@
                         <div id="light-blue">
                             <i class="fa fa-home" style="color:#87CEEB"> 0</i>
                         </div>
-                        <div id="magenta">
+                        <div id="pink">
                             <i class="fa fa-home" style="color:#FF69B4"> 0</i>
                         </div>
                         <div id="orange">
