--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -36,49 +36,16 @@
                     <strong style="font-size:20px; color:black">{{ player_name }}</strong>
                     <svg class="bi bi-x" style="float : right" width="2em" height="2em" viewBox="0 0 16 16" fill="red" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" d="M11.854 4.146a.5.5 0 010 .708l-7 7a.5.5 0 01-.708-.708l7-7a.5.5 0 01.708 0z" clip-rule="evenodd"></path>
-                      <path fill-rule="evenodd" d="M4.146 4.146a.5.5 0 000 .708l7 7a.5.5 0 00.708-.708l-7-7a.5.5 0 00-.708 0z" clip-rule="evenodd"/>
+                      <path fill-rule="evenodd" d="M4.146 4.146a.5.5 0 000 .708l7 7a.5.5 0 00.708-.708l-7-7a.5.5 0 00-.708 0z" clip-rule="evenodd"></path>
                     </svg>
                 </div>
                 <div id="player-money">
-                    <i class="fa fa-money" style="color:green"> 1500 $</i>
+                    <i class="fa fa-money" style="color:green">1500 $</i>
                 </div>
                 <div id="player-goods">
                     <div id="player-houses" style="display : flex; flex-direction: row; font-size: 14.7px">
-                        <div id="brown">
-                            <i class="fa fa-home" style="color:#8B4513"> 0</i>
-                        </div>
-                        <div id="light-blue">
-                            <i class="fa fa-home" style="color:#87CEEB"> 0</i>
-                        </div>
-                        <div id="pink">
-                            <i class="fa fa-home" style="color:#FF69B4"> 0</i>
-                        </div>
-                        <div id="orange">
-                            <i class="fa fa-home" style="color:#FF8C00"> 0</i>
-                        </div>
-                        <div id="red">
-                            <i class="fa fa-home" style="color:red"> 0</i>
-                        </div>
-                        <div id="yellow">
-                            <i class="fa fa-home" style="color:#FFD700"> 0</i>
-                        </div>
-                        <div id="green">
-                            <i class="fa fa-home" style="color:green"> 0</i>
-                        </div>
-                        <div id="blue">
-                            <i class="fa fa-home" style="color:blue"> 0</i>
-                        </div>
                     </div>
                     <div id="player-station-services" style="display : flex; flex-direction: row">
-                        <div id=player-station" style="height:20px">
-                            <i class="fa fa-train" aria-hidden="true" style="color:black"> 0 </i>
-                        </div>
-                        <div id="electricity" style="margin-left: 10px">
-                            <i class="fa fa-lightbulb-o" style="color:black"> 0 </i>
-                        </div>
-                        <div id="water" style="margin-left: 10px">
-                            <i class="fa fa-tint" style="color:black"> 0 </i>
-                        </div>
                     </div>
                 </div>
             </div>
