property card js function in sidebar.js

--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -40,7 +40,7 @@
                     </svg>
                 </div>
                 <div id="player-money">
-                    <i class="fa fa-money" style="color:green"> 1500 $</i>
+                    <i class="fa fa-money" style="color:green"> 1500 €</i>
                 </div>
                 <div id="player-goods">
                     <div id="player-houses" style="display : flex; flex-direction: row; font-size: 14.7px">
