Adding players + their properties

--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -71,12 +71,12 @@ let playerName = "{{ player_name }}";
       </div>
       <div class="modal-body">
          <div id="modalQuestionContent" class="text-center">
-
          </div>
          <div class="row my-4 text-center">
            <div class="col-6"><button type="button" id="modalQuestion1" class="btn btn-secondary" data-dismiss="modal"></button></div>
            <div class="col-6"><button type="button" id="modalQuestion2" class="btn btn-secondary" data-dismiss="modal"></button></div>
          </div>
+          <div id="card"></div>
       </div>
     </div>
   </div>
