--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -28,14 +28,11 @@
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
              <li class="nav-item dropdown text-center">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Propriétés
-                </a>
-                <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Player1's properties</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Player2's properties</a>
-                </div>
+                 </a>
+                 <div id = "properties" class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdown">
+                 </div>
               </li>
         </ul>
     </div>
