Adding a dice throw

--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -4,7 +4,9 @@
 {% block body %}
 <div id = "container"></div>
 <script src="{{ url_for('static',filename='js/graphics/three.min.js') }}"></script>
+<script src="{{ url_for('static',filename='js/graphics/cannon.min.js') }}"></script>
 <script src="{{ url_for('static',filename='js/graphics/OrbitControls.js') }}"></script>
+<script src="{{ url_for('static',filename='js/graphics/dice.js') }}"></script>
 <script src="{{ url_for('static',filename='js/graphics/helperFns.js') }}"></script>
 <script>
     init();
