Correcting dice props

--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -129,5 +129,7 @@ let playerName = "{{ player_name }}";
     </div>
   </div>
 </div>
+<div class="modal" id="modalMakeOffer">
+</div>
 
 {% endblock %}
