Dumb modal displayed to receiver

--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -77,6 +77,22 @@
         </div>
     </div>
 
+    <!-- MODAL RECEIVE OFFER -->
+    <div class="modal fade" id="modalReceiveOffer" tabindex="-1" role="dialog" aria-labelledby="modalReceiveOffer" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Vous avez reçu une offre</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="my-3 text-center">
+                        <button type="button" id="playTurn" class="btn btn-secondary" data-dismiss="modal">Ack</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- MODAL JAIL TURN -->
     <div class="modal fade" id="modalJailTurn" tabindex="-1" role="dialog" aria-labelledby="modalJailTurn" aria-hidden="true">
         <div class="modal-dialog" role="document">
