Trade is working
Ready to merge

--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -24,11 +24,11 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="{{ url_for("home")}}">Monopoly</a>
-    <div class="collapse navbar-collapse">
+    <div id = "trading" class="collapse navbar-collapse" style = "visibility: hidden">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item dropdown text-center">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Trading
+                    Proposer un échange à ...
                 </a>
                 <div id = "properties" class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdown">
                 </div>
