--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -56,6 +56,12 @@
         let playerId = {{ player_id }};
         let playerName = "{{ player_name }}";
     </script>
+    <script>
+        function setVisible() {
+            $('#trading').attr('style', 'visibility:visible');
+        }
+        setVisible();
+    </script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static',filename='js/socket.js') }}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
